@@ -1,30 +1,27 @@
 package com.sports.kickauction.config;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
-
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import static org.springframework.security.config.Customizer.withDefaults;
 
 import com.sports.kickauction.service.MemberDetailsService;
 
-import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 
+@RequiredArgsConstructor
 @Configuration
 @EnableWebSecurity
-@RequiredArgsConstructor
 public class SecurityConfig {
 
     private final MemberDetailsService memberDetailsService;
@@ -34,53 +31,50 @@ public class SecurityConfig {
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
+
+    // 주석: CSRF 및 기능 권한
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(csrf -> csrf.disable())
-            .cors(withDefaults())
-            .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/", "presignup", "presignups", "/signup", "signups", "/login", "/api/**",
+                .cors(Customizer.withDefaults())
+                .csrf(csrf -> csrf.disable()) // 주석: csrf - test단계 비활성화
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/", "presignup", "presignups", "/signup", "signups", "/login", "/api/**",
                                 "/images/**")
-                .permitAll()
-                .anyRequest().authenticated())
-            )
-            .formLogin(form -> form
-                .loginProcessingUrl("/login") 
-                .successHandler((req, res, auth) -> {
-                    res.setStatus(HttpServletResponse.SC_OK);
-                })
-                .failureHandler((req, res, ex) -> {
-                    res.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                    res.getWriter().write("로그인 실패");
-                })
-                .permitAll()
-            )
-            .logout(logout -> logout
-                .logoutUrl("/logout")
-                .logoutSuccessHandler((req, res, auth) -> res.setStatus(HttpServletResponse.SC_OK))
-                .permitAll()
-            );
+                        .permitAll()
+                        .anyRequest().authenticated())
+                .formLogin(login -> login
+                        .loginPage("/login")
+                        .defaultSuccessUrl("/", true)
+                        .permitAll())
+                .logout(logout -> logout
+                        .logoutSuccessUrl("/login?logout"));
+
         return http.build();
+    }
+
+    // 주석: UserDetailsService 등록
+    @Bean
+    public UserDetailsService userDetailsService() {
+        return memberDetailsService;
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        // 프론트 개발 서버 주소
+        config.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        // 허용 HTTP 메서드
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // 허용 헤더
+        config.setAllowedHeaders(Arrays.asList("*"));
+        // 쿠키 전송 허용하려면 true
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config); 
+        // 모든 /api/** 경로에 위 정책 적용
+        source.registerCorsConfiguration("/api/**", config);
+        source.registerCorsConfiguration("/images/**", config);
         return source;
-    }
-
-    @Bean
-    public AuthenticationManager authenticationManager(HttpSecurity http) throws Exception {
-        AuthenticationManagerBuilder builder = http.getSharedObject(AuthenticationManagerBuilder.class);
-        builder.userDetailsService(memberDetailsService).passwordEncoder(passwordEncoder());
-        return builder.build();
     }
 }
